--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/base": "^5.0.0-beta.4",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.4",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
